-- SQL dump generated using DBML (dbml-lang.org)
-- Database: PostgreSQL
-- Generated at: 2023-03-01T03:53:08.452Z

CREATE TABLE "users" (
  "username" varchar PRIMARY KEY,
  "hashed_password" varchar NOT NULL,
  "full_name" varchar NOT NULL,
  "email" varchar UNIQUE NOT NULL,
  "password_changed_at" timestamptz NOT NULL DEFAULT '0001-01-01 00:00:00Z',
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "accounts" (
  "id" bigserial PRIMARY KEY,
  "owner" varchar NOT NULL,
  "balance" bigint NOT NULL,
  "currency" varchar NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "entries" (
  "id" bigserial PRIMARY KEY,
  "account_id" bigint NOT NULL,
  "amount" bigint NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "transfers" (
  "id" bigserial PRIMARY KEY,
  "from_account_id" bigint NOT NULL,
  "to_account_id" bigint NOT NULL,
  "amount" bigint NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "trades" (
  "id" bigserial PRIMARY KEY,
  "first_from_account_id" bigint NOT NULL,
  "first_to_account_id" bigint NOT NULL,
  "first_amount" bigint NOT NULL,
  "second_from_account_id" bigint NOT NULL,
  "second_to_account_id" bigint NOT NULL,
  "second_amount" bigint NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "bids" (
  "id" bigserial PRIMARY KEY,
  "pair" varchar NOT NULL,
  "from_account_id" bigint NOT NULL,
  "to_account_id" bigint NOT NULL,
  "price" bigint NOT NULL,
  "initial_amount" bigint NOT NULL,
  "remaining_amount" bigint NOT NULL,
  "status" varchar NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "asks" (
  "id" bigserial PRIMARY KEY,
  "pair" varchar NOT NULL,
  "from_account_id" bigint NOT NULL,
  "to_account_id" bigint NOT NULL,
  "price" bigint NOT NULL,
  "initial_amount" bigint NOT NULL,
  "remaining_amount" bigint NOT NULL,
  "status" varchar NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "sessions" (
  "id" uuid PRIMARY KEY,
  "username" varchar NOT NULL,
  "refresh_token" varchar NOT NULL,
  "user_agent" varchar NOT NULL,
  "client_ip" varchar NOT NULL,
  "is_blocked" boolean NOT NULL DEFAULT false,
  "expires_at" timestamptz NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE INDEX ON "accounts" ("owner");

CREATE UNIQUE INDEX ON "accounts" ("owner", "currency");

CREATE INDEX ON "entries" ("account_id");

CREATE INDEX ON "transfers" ("from_account_id");

CREATE INDEX ON "transfers" ("to_account_id");

CREATE INDEX ON "transfers" ("from_account_id", "to_account_id");

CREATE INDEX ON "trades" ("first_from_account_id");

CREATE INDEX ON "trades" ("first_to_account_id");

CREATE INDEX ON "trades" ("second_from_account_id");

CREATE INDEX ON "trades" ("second_to_account_id");

CREATE INDEX ON "bids" ("pair");

CREATE INDEX ON "bids" ("from_account_id");

CREATE INDEX ON "bids" ("to_account_id");

CREATE INDEX ON "bids" ("from_account_id", "to_account_id");

CREATE INDEX ON "bids" ("status");

CREATE INDEX ON "asks" ("pair");

CREATE INDEX ON "asks" ("from_account_id");

CREATE INDEX ON "asks" ("to_account_id");

CREATE INDEX ON "asks" ("from_account_id", "to_account_id");

CREATE INDEX ON "asks" ("status");

COMMENT ON COLUMN "entries"."amount" IS 'can be negative or positive';

COMMENT ON COLUMN "transfers"."amount" IS 'it must be positive';

COMMENT ON COLUMN "trades"."first_amount" IS 'it must be positive';

COMMENT ON COLUMN "trades"."second_amount" IS 'it must be positive';

COMMENT ON COLUMN "bids"."initial_amount" IS 'it must be positive';

COMMENT ON COLUMN "bids"."remaining_amount" IS 'it must be positive';

COMMENT ON COLUMN "asks"."initial_amount" IS 'it must be positive';

COMMENT ON COLUMN "asks"."remaining_amount" IS 'it must be positive';

ALTER TABLE "accounts" ADD FOREIGN KEY ("owner") REFERENCES "users" ("username");

ALTER TABLE "entries" ADD FOREIGN KEY ("account_id") REFERENCES "accounts" ("id");

ALTER TABLE "transfers" ADD FOREIGN KEY ("from_account_id") REFERENCES "accounts" ("id");

ALTER TABLE "transfers" ADD FOREIGN KEY ("to_account_id") REFERENCES "accounts" ("id");

ALTER TABLE "trades" ADD FOREIGN KEY ("first_from_account_id") REFERENCES "accounts" ("id");

ALTER TABLE "trades" ADD FOREIGN KEY ("first_to_account_id") REFERENCES "accounts" ("id");

ALTER TABLE "trades" ADD FOREIGN KEY ("second_from_account_id") REFERENCES "accounts" ("id");

ALTER TABLE "trades" ADD FOREIGN KEY ("second_to_account_id") REFERENCES "accounts" ("id");

ALTER TABLE "bids" ADD FOREIGN KEY ("from_account_id") REFERENCES "accounts" ("id");

ALTER TABLE "bids" ADD FOREIGN KEY ("to_account_id") REFERENCES "accounts" ("id");

ALTER TABLE "asks" ADD FOREIGN KEY ("from_account_id") REFERENCES "accounts" ("id");

ALTER TABLE "asks" ADD FOREIGN KEY ("to_account_id") REFERENCES "accounts" ("id");

ALTER TABLE "sessions" ADD FOREIGN KEY ("username") REFERENCES "users" ("username");
